Add poetry env var

--- a/.github/actions/js-integration-tests/action.yml
+++ b/.github/actions/js-integration-tests/action.yml
@@ -34,7 +34,7 @@ runs:
 
     - name: Run JS integration tests
       run: |
-        node dist/cli/main.cjs start --dev
+        node dist/cli/main.cjs start --stage dev
         node dist/cli/main.cjs status
         sleep 5
         counter=0
